--- a/public/css/first/style.css
+++ b/public/css/first/style.css
@@ -626,11 +626,14 @@ float: right;
 	display: table-row;
 	width: 100%;
 }
+.cell, .table_cell {
+	display: table-cell;
+	padding: 0.5rem 1rem 0.5rem 1rem;
+	width: 1%;
+}
 
 .table_cell {
-	display: table-cell;
 	width: 50%;
-	padding: 0.5rem 1rem 0.5rem 1rem;
 }
 
 .buttons {
@@ -979,8 +982,8 @@ float: right;
 	display: none;
 }
 */
-.form_radio_btn input[type="radio"]:checked, 
-.form_radio_btn input[type="radio"]:not(:checked) 
+.form_radio_btn input[type="radio"]:checked,
+.form_radio_btn input[type="radio"]:not(:checked)
 {
     position: absolute;
     left: -9999px;
@@ -1181,7 +1184,7 @@ float: right;
 
 .nav a:hover {
 	text-decoration: underline;
-} 
+}
 
 .nav a:last-child {
 	text-decoration: underline;
@@ -1601,7 +1604,7 @@ overflow: hidden;
 		font-size: var(--small-fontsize);
 		line-height: normal;
 	  }
-	
+
 	body a {
 		font-size: var(--middle-fontsize);
 	}
