--- a/public/css/first/style.css
+++ b/public/css/first/style.css
@@ -194,6 +194,10 @@ a:visited, a:focus, a:hover,  a:active { text-decoration: underline; }
 	padding: 1rem 0;
 }
 
+.padrl1{
+	padding: 0 1rem;
+}
+
 .pad05{	padding: 0.5rem;}
 
 .pad_tb05_rl1{padding: 0.5rem 1rem;}
