appoint_by_date ended

--- a/public/css/first/style.css
+++ b/public/css/first/style.css
@@ -85,11 +85,11 @@ html {
 }
 
 body {
-  font-family: 'Liberation Sans', Arial, "Helvetica CY", Helvetica, "Nimbus Sans L", "Roboto", "Noto Sans", sans-serif;
-  font-size: var(--base-fontsize);
-  line-height: var(--base-lineheight);
-  max-width: 1640px;
-  margin: 0 auto;
+	font-family: 'Liberation Sans', Arial, "Helvetica CY", Helvetica, "Nimbus Sans L", "Roboto", "Noto Sans", sans-serif;
+	font-size: var(--base-fontsize);
+	line-height: var(--base-lineheight);
+	max-width: 1640px;
+	margin: 0 auto;
 	text-align: center;
 	color: var(--fontcolor-light, red);
 }
@@ -457,6 +457,7 @@ a:visited, a:focus, a:hover,  a:active { text-decoration: underline; }
     flex-grow: 1;
 	background: var(--bgcolor-content) none repeat scroll 0% 0%;
 	box-shadow: var(--boxshadow);
+	vertical-align: top;
   }
 
   .main_section_article .main_section_article_imgdiv {
@@ -465,8 +466,8 @@ a:visited, a:focus, a:hover,  a:active { text-decoration: underline; }
     overflow: hidden;
     margin-top: -2.5rem;
     border-radius: var(--radius);
-		box-shadow: rgba(0, 0, 0, 0.56) 0px 16px 38px -12px, rgba(0, 0, 0, 0.12) 0px 4px 25px 0px, rgba(0, 0, 0, 0.2) 0px 8px 10px -5px;
-	  }
+	box-shadow: rgba(0, 0, 0, 0.56) 0px 16px 38px -12px, rgba(0, 0, 0, 0.12) 0px 4px 25px 0px, rgba(0, 0, 0, 0.2) 0px 8px 10px -5px;
+  }
 
   .main_section_article  .main_section_article_imgdiv img {
     width: 100%;
@@ -1702,8 +1703,9 @@ overflow: hidden;
   }
 
   .main_section_article {
-    max-width: calc((100%/2) - 4rem);
-		padding: 0.5rem 0.5rem 0.5rem 0.5rem;
+    max-width: calc((100%/2) - 2rem);
+	padding: 0.5rem 0.5rem 0.5rem 0.5rem;
+	margin: 0.5rem;
   }
 
 	.gallery_a img {
@@ -1728,6 +1730,12 @@ overflow: hidden;
 
 /* ----------- resolution up to 380px ----------------- */
 @media screen and (max-width: 380px) {
+	.main_section_article {
+		max-width: 90%;
+		padding: 0.5rem 0.5rem 0.5rem 0.5rem;
+		margin: 0.25rem;
+	}
+
 	.gallery_a img {
 		height: 6rem;
 		/* width: 8rem; */
